# artFeria-back-end

./: .gitignore  README.md  pyproject.toml
artferia/: app.py  database.py  models.py  pyproject.toml  schemas.py  security.py  settings.py
astferia-back/: pyproject.toml
migrations/: env.py
migrations/versions/: 3a28059ab30e_update_user_table.py  f8730f53d4a2_create_users_table.py
routers/: auth.py  events.py  users.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_events.py  test_users.py
